Add preview and favicon image

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
         <title>Speedtest</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" href="/favicon.png" type="image/png">
+        <link rel="icon" href="/favicon.png" type="image/png">
         <link rel="stylesheet" href="main.css">
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://kit.fontawesome.com/ca8ffbc206.js" crossorigin="anonymous"></script>
